Bug 369288 - hfsplus-tools commands renamed in some distributions
Summary: hfsplus-tools commands renamed in some distributions
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-24 15:58 UTC by Mattia
Modified: 2016-09-24 16:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mattia 2016-09-24 15:58:10 UTC
After the switch to hfsplus-tools in bug #364233 I realized that Fedora renames the standard hfsplus-tools executables.
Specifically, newfs_hfs is renamed to mkfs.hfsplus and fsck_hfs is renamed to fsck.hfsplus

I've opened a request in Fedora bugzilla for using symlinks instead of renaming executables, but I then realized that other distributions like Ubuntu and Debian are using mkfs.hfsplus and fsck.hfsplus commands, so maybe would be better if partitionmanager checks if those commands are present in the system and uses those instead of native names?

Reproducible: Always
Comment 1 Andrius Štikonas 2016-09-24 16:05:10 UTC
Yeah, I think I'll switch it so symlinks. I also didn't realize that other distributions just rename executables instead of using symlinks.

Thanks for the report.
Comment 2 Andrius Štikonas 2016-09-24 16:06:52 UTC
Do you think make sense to switch HFS to the same utilities away from hfsutils?
Comment 3 Andrius Štikonas 2016-09-24 16:11:44 UTC
Git commit aa5daf03786a3eb2a8ca783868f2d2ddd869e1ac by Andrius Štikonas.
Committed on 24/09/2016 at 16:10.
Pushed by stikonas into branch 'master'.

Use symlinks to hfsplus (diskdev_cmds) commands.
Some distributions rename those commands to mkfs.hfsplus and fsck.hfsplus.

M  +2    -2    src/fs/hfsplus.cpp

http://commits.kde.org/kpmcore/aa5daf03786a3eb2a8ca783868f2d2ddd869e1ac
Comment 4 Mattia 2016-09-24 16:19:23 UTC
(In reply to Andrius Štikonas from comment #2)
> Do you think make sense to switch HFS to the same utilities away from
> hfsutils?

I don't know if hfsplus-tools can handle HFS too. I don't personally use HFS or HFS+.