Use symlinks to hfsplus (diskdev_cmds) commands. Some distributions rename those commands to mkfs.hfsplus and fsck.hfsplus.

BUG: 369288